<resources>
    <string name="app_name">FYP</string>
    <string name="community">Community</string>
    <string name="class_finder">Class Finder</string>
    <string name="enter_class">Enter Class</string>
    <string name="find_class">Find Class</string>
    <string name="chat_area">Chat Area</string>
    <string name="study_buddy">Study Buddy</string>
    <string name="tips">Tips</string>
    <string name="jobs">Jobs</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="module">Module</string>
    <string name="resources">Resources</string>

    <string name="select_date">Select date</string>
    <string name="textview">TextView</string>
    <string name="time">Time</string>
    <string name="pick_time">Pick Time</string>
    <string name="active_groups">Active Groups</string>
    <string name="suggest_group">Suggest Group</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="todo">TODO</string>
    <string name="modules">modules</string>
    <string name="marketing">Marketing</string>
    <string name="management">Management</string>

    <string name="create_comment">Create Comment</string>

    <string name="resourcs">resourcs</string>
    <string name="view_man">view man</string>

    <string name="submit">Submit</string>
    <string name="i_found_this_module_very_interesting_and_it_helped_build_a_foundation_that_helped_with_the_management_elective_in_fourth_year_i_would_advise_anyone_looking_to_go_into_managment_after_college_to_take_up_this_elective">I found this module very interesting, and it helped build a foundation that helped with the management elective in fourth year. I would advise anyone looking to go into managment after college to take up this elective</string>
    <string name="this_module_was_very_interesting_and_alot_of_the_core_principles_such_as_segmnetation_of_the_market_is_seen_throughout_other_modules_i_f_you_have_an_interest_in_why_people_buy_the_way_they_do_then_this_module_is_for_you">This module was very interesting, and alot of the core principles such as segmnetation of the market is seen throughout other modules. I f you have an interest in why people buy the way they do, then this module is for you!.</string>
    <string name="Leave_comment_here">Leave Comment here</string>

    <string name="save_comment">Save Comment</string>
    <string name="leave_comment_here">Leave comment here</string>

    <string name="google_maps_API"> AIzaSyDbOaj1BHC61tPZbug4WYplDROodhLfXF8</string>
    <string name="logout">Logout</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter Description</string>
    <string name="view_comments">View Comments</string>
    <string name="title">title</string>
    <string name="description">Description</string>
    <string name="maps">Maps</string>
    <string name="button">Button</string>


    <string-array name="names">
        <item>Accounting</item>
        <item>Statistics</item>
        <item>Web Development</item>
        <item>Information Systems</item>
    </string-array>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>