<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CommunitySection">


    <ImageView
        android:id="@+id/imageViewChatarea"
        android:layout_width="168dp"
        android:layout_height="126dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout7"
        app:srcCompat="@drawable/chatarea" />

    <Button
        android:id="@+id/btnChat"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/chat_area"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewChatarea" />

    <ImageView
        android:id="@+id/imageViewTips"
        android:layout_width="168dp"
        android:layout_height="126dp"
        android:layout_marginTop="80dp"

        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout7"
        app:srcCompat="@drawable/advice" />

    <Button
        android:id="@+id/btnTips"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/tips"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toEndOf="@+id/btnChat"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTips" />

    <ImageView
        android:id="@+id/imageViewStudybuddy"
        android:layout_width="168dp"
        android:layout_height="126dp"


        android:layout_marginTop="88dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/imageViewjob"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChat"
        app:srcCompat="@drawable/studdybuddy" />

    <Button
        android:id="@+id/btnStudyBuddy"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:text="@string/study_buddy"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toStartOf="@+id/btnCanvas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewStudybuddy"
        app:layout_constraintVertical_bias="0.111" />

    <ImageView
        android:id="@+id/imageViewjob"
        android:layout_width="168dp"
        android:layout_height="126dp"


        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTips"
        app:srcCompat="@drawable/canvas" />

    <Button
        android:id="@+id/btnCanvas"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="12dp"
        android:text="Canvas"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewjob"
        app:layout_constraintVertical_bias="0.125" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="412dp"
        android:layout_height="55dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/imageViewChatarea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        app:itemBackground="?attr/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/Toolbar"
        app:layout_constraintEnd_toEndOf="@+id/Toolbar"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="@+id/Toolbar"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout7"
        app:layout_constraintVertical_bias="0.0" />


    <!--reference-->
    <!--https://www.youtube.com/watch?v=JjfSjMs0ImQ -->

</androidx.constraintlayout.widget.ConstraintLayout>




    
    
